--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/new_schema
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password = superroot
+server.port=8083
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 
